EDA And Problem Statement

--- a/notebook/EDA Student performance.ipynb
+++ b/notebook/EDA Student performance.ipynb
@@ -1606,6 +1606,15 @@
     "- Student's Performance is not much related with test preparation course\n",
     "- Finishing preparation course is benefitial."
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "## The end\n"
+   ]
   }
  ],
  "metadata": {
